--- a/ESP/platformio.ini
+++ b/ESP/platformio.ini
@@ -13,3 +13,4 @@ platform = espressif32
 board = adafruit_qtpy_esp32s3_nopsram
 framework = arduino
 lib_extra_dirs = ~/Documents/Arduino/libraries
+lib_deps = arkhipenko/TaskScheduler@^3.7.0
