--- a/ESP/platformio.ini
+++ b/ESP/platformio.ini
@@ -8,9 +8,24 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:adafruit_qtpy_esp32s3_nopsram]
+[env:esp32-S3_UART]
+platform = espressif32
+board = adafruit_feather_esp32s3_nopsram
+framework = arduino
+lib_extra_dirs = ~/Documents/Arduino/libraries
+monitor_speed = 115200
+lib_deps = 
+	arkhipenko/TaskScheduler@^3.7.0
+	adafruit/Adafruit NeoPixel @ ^1.11.0
+	dlloydev/ESP32 ESP32S2 AnalogWrite@^4.3.4
+
+[env:esp32-S3_USB]
 platform = espressif32
 board = adafruit_qtpy_esp32s3_nopsram
 framework = arduino
 lib_extra_dirs = ~/Documents/Arduino/libraries
-lib_deps = arkhipenko/TaskScheduler@^3.7.0
+lib_deps = 
+	arkhipenko/TaskScheduler @ ^3.7.0
+	adafruit/Adafruit NeoPixel @ ^1.11.0
+	dlloydev/ESP32 ESP32S2 AnalogWrite@^4.3.4
+monitor_speed = 115200
